messy solution for overlay, need to do better

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section id="overlay">
       <h1>Final Score</h1>
       <p id="final_score">100</p>
-      <button onclick="reset()">Play again!</button>
+      <a class="link-button" href="index.html">Play again!</a>
     </section>
     <header>
       <h1>Wheel of Fortune</h1>
@@ -22,6 +22,7 @@
       <button class="play" onclick="play()">Play</button>
       <figure id="score-box">Score: <span id="score">0</span></figure>
     </main>
+    <!-- for output of variables, for debugging -->
     <footer id="dev"></footer>
     <script src="wheel-of-fortune.js"></script>
   </body>
